Update 'backend-tests-go-ncqgtoxf' component image to: quay.io/rhtap_qe/backend-tests-go-ncqgtoxf:9aa0821a6998dfb478e329a2b148be4bd4dfe02c@sha256:6a73228b8bb832a5526d49df40b06fc205046fc8a4ba20eb09cb010307c7612d

--- a/components/backend-tests-go-ncqgtoxf/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-ncqgtoxf/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-ncqgtoxf
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-ncqgtoxf:9aa0821a6998dfb478e329a2b148be4bd4dfe02c@sha256:6a73228b8bb832a5526d49df40b06fc205046fc8a4ba20eb09cb010307c7612d
+          name: container-image
